--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -122,7 +122,9 @@ header .logo {
 }
 
 .cta .cta-text {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
   vertical-align: top;
   font-size: 77px;
   margin-top: 120px;
@@ -150,14 +152,21 @@ header .logo {
   margin-top: 69px;
 }
 
+/* Main Content  */
 .main-content {
-  border-top: 1px solid black;
-  margin-top: 76px;
-  padding-top: 39px;
+	display: flex;
+	flex-direction: column;
+	border-top: 1px solid black;
+	margin-top: 76px;
+	padding-top: 39px;
 }
 
 .main-content .top-content {
-  padding: 0 10px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-content: center;
+  	padding: 0 10px;
 }
 
 .main-content .top-content .text-content {
@@ -175,8 +184,11 @@ header .logo {
 }
 
 .main-content .bottom-content {
-  margin-top: 37px;
-  padding: 0 10px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	margin-top: 37px;
+	padding: 0 10px;
 }
 
 .main-content .bottom-content .text-content {
