--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -202,17 +202,23 @@ header .logo {
 }
 
 .contact {
-  margin-top: 57px;
-  border-top: 1px solid black;
-  padding: 39px 10px 0;
+	display: flex;
+	flex-direction: column;
+	align-content: flex-start;
+	margin-top: 57px;
+	border-top: 1px solid black;
+	padding: 39px 10px 0;
 }
 
 .contact p {
-  margin: 20px 0;
+  margin: 10px 0;
 }
 
 footer {
-  margin: 32px 0;
-  text-align: center;
-  font-size: 14px;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	margin: 32px 0;
+	text-align: center;
+	font-size: 14px;
 }
